German/Lenguajes y compiladores/Lab3/tests/bad/bad14.imp
data Bool = True | False

-- repeated parameters
method suma (n : Bool, n : Bool) returns (r : Bool)
{
    var m : N
} 
